# TCO-GatesBinaryToText

./: .gitignore  CMakeLists.txt  Makefile.TCO  README.md  memcheck.sh  test.sh  test12.sh
src/: bool.h  cstring_pdouble.h  cstring_pdouble_test.c  cstring_score.h  cstring_score_test.c  cstring_uint32.h  data_context.h  deque.c  deque.h  deque_test.c  deque_type.h  fbstp.h  indexed_score.h  io.c  io.h  likely.h  main.c  make_str.h  min_max.h  naive_utoa.h  naive_utoa_test.c  num_procs.c  num_procs.h  option_type.h  out3.c  out3.h  out4.c  out4.h  out5.c  out5.h  out_sorted.c  out_sorted.h  owner.h  pair.h  parse_program_options.c  parse_program_options.h  pdouble_as_cstring.h  program_options.c  program_options.h  quicksort.h  (+33 more)
